angular attaching to API :-)  fixed CORS

--- a/client/app/partials/partial1.html
+++ b/client/app/partials/partial1.html
@@ -3,9 +3,11 @@
 <table class="table table-striped">
     <tr>
         <th>Name</th>
+        <th>Type</th>
     </tr>
     <tr ng-repeat="object in data.objects">
         <td>{{object.name}}</td>
+        <td>{{object.type}}</td>
     </tr>
 </table>
 
