--- a/client/app/partials/objectedit.html
+++ b/client/app/partials/objectedit.html
@@ -1,6 +1,21 @@
-<h2 data-ng-init="findOne()">Object Edit</h2>
+<div data-ng-init="findOne()"></div>
 
+<div class="row-fluid">
+    <div class="span6">
+        <form class="form-inline" role="form" data-ng-submit="update()">
+            <div class="form-group">
+                <input type="text" data-ng-model="object.name" class="form-control" id="title" required autofocus="autofocus" value="{{object.name}}">
+            </div>
+        </form>
+    </div>
 
+    <div class="span6">
+        <div class="btn-group pull-right">
+            <button type="button" data-ng-click="copyProject()" class="btn btn-default">Copy</button>
+            <button type="button" class="btn btn-danger" data-ng-click="remove(project)">Delete</button>
+        </div>
+    </div>
+</div>
 
 <!--<select ng-model="q" autofocus>-->
     <!--<option data-ng-repeat="type in data.types">{{type.name}}</option>-->
