--- a/client/app/partials/objectedit.html
+++ b/client/app/partials/objectedit.html
@@ -16,6 +16,17 @@
         </div>
     </div>
 </div>
+<div class="col-md-12">
+    <table class="table">
+        <tr data-ng-repeat="column in object.fields" data-ng-model="object.fields">
+            <td><a data-ng-href="#!/fields/{{column._id}}">{{column.name}}</a></td>
+            <td>{{column.type}}</td>
+            <td>{{column.req}}</td>
+            <td>{{column.length}}</td>
+            <td><button type="button"  class="btn btn-warning btn-sm glyphicon glyphicon-trash pull-right" data-ng-click="removeField(column)"> Delete</button></td>
+        </tr>
+    </table>
+</div>
 
 <!--<select ng-model="q" autofocus>-->
     <!--<option data-ng-repeat="type in data.types">{{type.name}}</option>-->
