--- a/client/app/partials/objectedit.html
+++ b/client/app/partials/objectedit.html
@@ -18,12 +18,22 @@
 </div>
 <div class="col-md-12">
     <table class="table">
+        <tr>
+            <th style="width: 30%">Name</th>
+            <th style="width: 30%">Type</th>
+            <th>Required</th>
+            <th>Length</th>
+            <th>Action</th>
+        </tr>
+
         <tr data-ng-repeat="column in object.fields" data-ng-model="object.fields">
             <td><a data-ng-href="#!/fields/{{column._id}}">{{column.name}}</a></td>
             <td>{{column.type}}</td>
-            <td>{{column.req}}</td>
+            <td class="" data-ng-show="column.req == 'y'">{{column.req}}</td>
+            <td data-ng-show="column.req == 'n'"></td>
+
             <td>{{column.length}}</td>
-            <td><button type="button"  class="btn btn-warning btn-sm glyphicon glyphicon-trash pull-right" data-ng-click="removeField(column)"> Delete</button></td>
+            <td><button type="button"  class="btn btn-warning btn-small" data-ng-click="removeField(column)"><i class="icon-white icon-trash"></i> Delete</button></td>
         </tr>
     </table>
 </div>
