--- a/client/app/partials/objectedit.html
+++ b/client/app/partials/objectedit.html
@@ -1,29 +1,68 @@
 <div data-ng-init="findOne()"></div>
 
 <div class="row-fluid">
-    <div class="span6">
+    <div class="span12">
         <form class="form-inline" role="form" data-ng-submit="update()">
-            <div class="form-group">
-                <input type="text" data-ng-model="object.name" class="form-control" id="title" required autofocus="autofocus" value="{{object.name}}">
-            </div>
+            <fieldset>
+                <legend>Object Data</legend>
+                <div class="form-group">
+                    <input type="text" data-ng-model="object.name" class="form-control" id="title" required autofocus="autofocus" value="{{object.name}}">
+                    <div class="dropdown pull-right">
+                        <button type="button" class="btn dropdown-toggle">Copy</button>
+                        <ul class="dropdown-menu">
+                            <li ng-repeat="copyobject in data.objects">
+                                <a data-ng-click="copySelectedObject(copyobject)">{{copyobject.name}}</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </fieldset>
         </form>
     </div>
-
-    <div class="span6">
-        <div class="btn-group pull-right">
-            <button type="button" data-ng-click="copyProject()" class="btn btn-default">Copy</button>
-            <button type="button" class="btn btn-danger" data-ng-click="remove(project)">Delete</button>
-        </div>
-    </div>
 </div>
+
 <div class="col-md-12">
+
+    <form class="form-inline">
+        <fieldset>
+            <legend>Fields</legend>
+            <table>
+                <tr>
+                    <th style="width: 30%">
+                        <input type="text" data-ng-model="newfield.name" class="form-control pull-left" autofocus id="newfieldname" >
+                    </th>
+                    <th style="width: 25%">
+                        <select class="pull-left" ng-model="newfield.type">
+                            <option data-ng-repeat="fieldtype in data.fieldtypes">{{fieldtype.name}}</option>
+                        </select>
+                    </th>
+                    <th style="width: 15%">
+                        <select class="pull-left" ng-model="newfield.required">
+                            <option selected>Optional</option>
+                            <option>Required</option>
+                        </select>
+                    </th>
+                    <th style="width: 15%">
+                        <input type="text" data-ng-model="newfield.length" class="form-control" id="newfieldlength" >
+                    </th>
+                    <th style="width: 15%">
+                        <button type="button" class="btn pull-left"> Add</button>
+                    </th>
+                </tr>
+
+
+            </table>
+        </fieldset>
+    </form>
+
+
     <table class="table">
         <tr>
             <th style="width: 30%">Name</th>
-            <th style="width: 30%">Type</th>
-            <th>Required</th>
-            <th>Length</th>
-            <th>Action</th>
+            <th style="width: 25%">Type</th>
+            <th style="width: 15%">Required</th>
+            <th style="width: 15%">Length</th>
+            <th style="width: 15%">Action</th>
         </tr>
 
         <tr data-ng-repeat="column in object.fields" data-ng-model="object.fields">
@@ -31,9 +70,8 @@
             <td>{{column.type}}</td>
             <td class="" data-ng-show="column.req == 'y'">{{column.req}}</td>
             <td data-ng-show="column.req == 'n'"></td>
-
             <td>{{column.length}}</td>
-            <td><button type="button"  class="btn btn-warning btn-small" data-ng-click="removeField(column)"><i class="icon-white icon-trash"></i> Delete</button></td>
+            <td><button type="button"  class="btn btn-small" data-ng-click="removeField(column)"><i class="icon-black icon-trash"></i> Delete</button></td>
         </tr>
     </table>
 </div>
