--- a/client/app/partials/objectedit.html
+++ b/client/app/partials/objectedit.html
@@ -1,23 +1,19 @@
 <div data-ng-init="findOne()"></div>
 
 <div class="row-fluid">
-    <div class="span12">
-        <form class="form-inline" role="form" data-ng-submit="update()">
-            <fieldset>
-                <legend>Object Data</legend>
-                <div class="form-group">
-                    <input type="text" data-ng-model="object.name" class="form-control" id="title" required value="{{object.name}}">
-                    <div class="dropdown pull-right">
-                        <button type="button" class="btn dropdown-toggle">Copy Fields</button>
-                        <ul class="dropdown-menu">
-                            <li ng-repeat="copyobject in data.objects">
-                                <a data-ng-click="copySelectedObject(copyobject)">{{copyobject.name}}</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </fieldset>
-        </form>
+    <div class="span6">
+     <h3>{{object.name}}</h3>
+    </div>
+    <div class="span6">
+        <div class="dropdown pull-right">
+            <button type="button" class="btn dropdown-toggle">Copy Fields</button>
+            <ul class="dropdown-menu">
+                <li ng-repeat="copyobject in data.objects">
+                    <a data-ng-click="copySelectedObject(copyobject);focusInput=true">{{copyobject.name}}</a>
+                </li>
+            </ul>
+        </div>
+        <a href="#/objects/{{object._id}}/views" class="btn pull-right">Views</a>
     </div>
 </div>
 
@@ -29,7 +25,11 @@
             <th style="width: 25%">Type</th>
             <th style="width: 15%">Required</th>
             <th style="width: 15%">Length</th>
-            <th style="width: 15%">Action</th>
+            <th style="width: 15%">
+                <div class="pull-right">
+                    Action
+                </div>
+            </th>
         </tr>
         <!--Input new fields-->
         <tr>
@@ -51,7 +51,7 @@
                 <input type="text" data-ng-model="newfield.length" class="form-control" id="newfieldlength" >
             </td>
             <td>
-                <button type="button" class="btn btn-small" data-ng-click="addField(newfield);focusInput=true"><i class="icon-black icon-circle-arrow-down"></i> Add</button>
+                <button type="button" class="btn btn-small pull-right" data-ng-click="addField(newfield);focusInput=true"><i class="icon-black icon-circle-arrow-down"></i> Add</button>
             </td>
         </tr>
         <tr data-ng-repeat="column in object.fields" data-ng-model="object.fields">
@@ -60,7 +60,7 @@
             <td class="" data-ng-show="column.req == 'y'">{{column.req}}</td>
             <td data-ng-show="column.req == 'n'"></td>
             <td>{{column.length}}</td>
-            <td><button type="button"  class="btn btn-small" data-ng-click="removeField(column)"><i class="icon-black icon-trash"></i> Delete</button></td>
+            <td><button type="button"  class="btn btn-small pull-right" data-ng-click="removeField(column)"><i class="icon-black icon-trash"></i> Delete</button></td>
         </tr>
     </table>
 </div>
