--- a/client/app/partials/objectviews.html
+++ b/client/app/partials/objectviews.html
@@ -20,7 +20,7 @@
                 <th style="width: 20%">Create</th>
                 <!--<th style="width: 20%">Edit</th>-->
             <tr data-ng-repeat="field in object.views[0].fields" data-ng-model="object.createview.fields">
-                <td>{{field.name}}</td>
+                <td>{{field.name}}<span class="pull-right"><i class="icon-black icon-remove-sign"  data-ng-click="removeViewField(field,'0')"></i></span></td>
             </tr>
         </table>
     </div>
@@ -32,7 +32,7 @@
                 <th style="width: 20%">Edit</th>
                 <!--<th style="width: 20%">Edit</th>-->
             <tr data-ng-repeat="field in object.views[1].fields" data-ng-model="object.editview.fields">
-                <td>{{field.name}}</td>
+                <td>{{field.name}}<span class="pull-right"><i class="icon-black icon-remove-sign" data-ng-click="removeViewField(field,'1')"></i></span></td>
             </tr>
         </table>
     </div>
@@ -45,7 +45,7 @@
                 <th style="width: 20%">Show</th>
                 <!--<th style="width: 20%">Edit</th>-->
             <tr data-ng-repeat="field in object.views[2].fields" data-ng-model="object.showview.fields">
-                <td>{{field.name}}</td>
+                <td>{{field.name}}<span class="pull-right"><i class="icon-black icon-remove-sign" data-ng-click="removeViewField(field,'2')"></i></span></td>
             </tr>
         </table>
     </div>
@@ -58,7 +58,7 @@
                 <th style="width: 20%">Dashboard</th>
                 <!--<th style="width: 20%">Edit</th>-->
             <tr data-ng-repeat="field in object.views[3].fields" data-ng-model="object.compactview.fields">
-                <td>{{field.name}}</td>
+                <td>{{field.name}}<span class="pull-right"><i class="icon-black icon-remove-sign" data-ng-click="removeViewField(field,'3')"></i></span></td>
             </tr>
         </table>
     </div>
