--- a/client/app/partials/objectedit.html
+++ b/client/app/partials/objectedit.html
@@ -6,7 +6,7 @@
     </div>
     <div class="span6">
         <div class="dropdown pull-right">
-            <button type="button" class="btn dropdown-toggle">Copy Fields</button>
+            <button type="button" class="btn dropdown-toggle">Copy</button>
             <ul class="dropdown-menu">
                 <li ng-repeat="copyobject in data.objects">
                     <a data-ng-click="copySelectedObject(copyobject);focusInput=true">{{copyobject.name}}</a>
