drag drop ok, service also working to turn selected fields into json object

--- a/client/app/partials/objectedit.html
+++ b/client/app/partials/objectedit.html
@@ -42,7 +42,7 @@
                 </select>
             </td>
             <td>
-                <select reequired class="pull-left" ng-model="newfield.req">
+                <select required class="pull-left" ng-model="newfield.req">
                     <option selected>n</option>
                     <option>y</option>
                 </select>
