--- a/client/app/partials/objectviews.html
+++ b/client/app/partials/objectviews.html
@@ -3,64 +3,50 @@
 <div class="row-fluid">
 
     <div class="span2">
-        <table class="table">
-            <tr>
-                <th style="width: 20%">Fields</th>
-            </tr>
-            <tr data-ng-repeat="field in object.fields" data-ng-model="object.fields">
-                <td><span class="pull-right" data-ng-click="addFieldToViews(field)"><i class="icon-gray icon-arrow-right"></i></span>{{field.name}}</td>
-            </tr>
-        </table>
+
+        <h5>Available Fields</h5>
+
+        <ul data-ng-update = "updateCreateView()" class="unstyled" ui-sortable="sortableOptions" ng-model="createview">
+            <li ng-repeat="field in object.fields">{{ item }}<span class="pull-right" data-ng-click="addFieldToViews(field)"><i class="icon-gray icon-arrow-right"></i></span>{{field.name}}</td></li>
+        </ul>
+
+        <!--<tr data-ng-repeat="field in object.fields" data-ng-model="object.fields">-->
+                <!--<td><span class="pull-right" data-ng-click="addFieldToViews(field)"><i class="icon-gray icon-arrow-right"></i></span>{{field.name}}</td>-->
+            <!--</tr>-->
     </div>
 
     <div class="span2">
-
         <h5>Create</h5>
-
         <ul data-ng-update = "updateCreateView()" class="unstyled" ui-sortable="sortableOptions" ng-model="createview">
             <li ng-repeat="item in createview">{{ item }}<span class="pull-right"><i class="icon-black icon-remove-sign" data-ng-click="removeViewField(item,'0')"></i></span></li>
         </ul>
-
     </div>
-
-
-
     <div class="span2">
-
-        <table class="table">
-            <tr>
-                <th style="width: 20%">Edit</th>
-            <tr data-ng-repeat="field in object.views[1].fields" data-ng-model="object.editview.fields">
-                <td>{{field.name}}<span class="pull-right"><i class="icon-black icon-remove-sign" data-ng-click="removeViewField(field,'1')"></i></span></td>
-            </tr>
-        </table>
+        <h5>Edit</h5>
+        <ul data-ng-update = "updateEditView()" class="unstyled" ui-sortable="sortableOptions" ng-model="editview">
+            <li ng-repeat="item in editview">{{ item }}<span class="pull-right"><i class="icon-black icon-remove-sign" data-ng-click="removeViewField(item,'1')"></i></span></li>
+        </ul>
     </div>
-
-
     <div class="span2">
-
-        <table class="table">
-            <tr>
-                <th style="width: 20%">Show</th>
-                <!--<th style="width: 20%">Edit</th>-->
-            <tr data-ng-repeat="field in object.views[2].fields" data-ng-model="object.showview.fields">
-                <td>{{field.name}}<span class="pull-right"><i class="icon-black icon-remove-sign" data-ng-click="removeViewField(field,'2')"></i></span></td>
-            </tr>
-        </table>
+        <h5>Show</h5>
+        <ul data-ng-update = "updateShowView()" class="unstyled" ui-sortable="sortableOptions" ng-model="showview">
+            <li ng-repeat="item in showview">{{ item }}<span class="pull-right"><i class="icon-black icon-remove-sign" data-ng-click="removeViewField(item,'2')"></i></span></li>
+        </ul>
     </div>
-
-
     <div class="span2">
-
-        <table class="table">
-            <tr>
-                <th style="width: 20%">Dashboard</th>
-                <!--<th style="width: 20%">Edit</th>-->
-            <tr data-ng-repeat="field in object.views[3].fields" data-ng-model="object.compactview.fields">
-                <td>{{field.name}}<span class="pull-right"><i class="icon-black icon-remove-sign" data-ng-click="removeViewField(field,'3')"></i></span></td>
-            </tr>
-        </table>
+        <h5>Dashboard</h5>
+        <ul data-ng-update = "updateDashboardView()" class="unstyled" ui-sortable="sortableOptions" ng-model="dashboardview">
+            <li ng-repeat="item in dashboardview">{{ item }}<span class="pull-right"><i class="icon-black icon-remove-sign" data-ng-click="removeViewField(item,'3')"></i></span></li>
+        </ul>
     </div>
+    <div class="span2">
+        <h5>List</h5>
+        <ul data-ng-update = "updateListView()" class="unstyled" ui-sortable="sortableOptions" ng-model="listview">
+            <li ng-repeat="item in listview">{{ item }}<span class="pull-right"><i class="icon-black icon-remove-sign" data-ng-click="removeViewField(item,'4')"></i></span></li>
+        </ul>
+    </div>
+
+
 
 
 </div>
