--- a/client/app/partials/projects.html
+++ b/client/app/partials/projects.html
@@ -1,29 +1,54 @@
 <h3>Projects</h3>
 
 <div class="row-fluid">
-    <div class="span4">
+    <div class="span3">
         <ul class="unstyled" >
             <li ng-repeat="type in data.projects"><a ng-href="#/projects" data-ng-click="projectFieldsForCreate(type)">{{ type.name }}</a></li>
         </ul>
     </div>
 
-    <div class="span8">
+    <div class="span3">
         <form>
-            <button data-ng-click="saveFormDetails(formItems)">Save</button>
+
             <fieldset>
-                <legend>Enter Data</legend>
+                <!--<legend>Enter Data</legend>-->
                     <div ng-repeat="formItem in formItems">
                         <div ng-switch on="formItem.type">
                             <label>{{formItem.name}}</label>
+                            <textarea rows="5" ng-switch-when="Note" data-ng-model="formItem.content"></textarea>
                             <input type="text" ng-switch-when="Text" data-ng-model="formItem.content">
+                            <input type="text" ng-switch-when="Date" data-ng-model="formItem.content">
                             <input type="number" ng-switch-when="Number" data-ng-model="formItem.content">
                             <select ng-switch-when="list" data-ng-model="formItem.content" ng-options="option for option in formItem.options"/>
-                            <input type="checkbox" ng-switch-when="boolean" data-ng-model="formItem.content">
+                            <input type="checkbox" ng-switch-when="Yes or No" data-ng-model="formItem.content">
                         </div>
                     </div>
             </fieldset>
+
+            <button data-ng-click="saveFormDetails(formItems)">Save</button>
             <!--<button data-ng-click="saveFormDetails(formItems)">Save</button>-->
         </form>
+    </div>
+
+    <div class="span6">
+
+        <table class="table table-condensed">
+            <tr>
+                <th style="width: 30%">Project Name</th>
+                <th style="width: 30%">Project Type</th>
+
+
+            </tr>
+            <tr ng-repeat="object in projectInstances| filter:data.selectedType">
+                <td>
+                    <a data-ng-href="#/projects/{{object._id}}/edit">{{object.Title}}</a>
+                </td>
+                <td>
+                    {{ object.Type }}
+                </td>
+
+            </tr>
+        </table>
     </div>
 
 </div>
