--- a/client/app/partials/objectviews.html
+++ b/client/app/partials/objectviews.html
@@ -6,7 +6,7 @@
 
         <h5>Available Fields</h5>
 
-        <ul data-ng-update = "updateCreateView()" class="unstyled" ui-sortable="sortableOptions" ng-model="createview">
+        <ul class="unstyled"  ng-model="objectFields">
             <li ng-repeat="field in object.fields">{{ item }}<span class="pull-right" data-ng-click="addFieldToViews(field)"><i class="icon-gray icon-arrow-right"></i></span>{{field.name}}</td></li>
         </ul>
 
@@ -17,8 +17,8 @@
 
     <div class="span2">
         <h5>Create</h5>
-        <ul data-ng-update = "updateCreateView()" class="unstyled" ui-sortable="sortableOptions" ng-model="createview">
-            <li ng-repeat="item in createview">{{ item }}<span class="pull-right"><i class="icon-black icon-remove-sign" data-ng-click="removeViewField(item,'0')"></i></span></li>
+        <ul data-ng-update = "updateCreateView()" class="unstyled" ui-sortable="sortableOptionsCreate" ng-model="createview">
+            <li ng-repeat="item in createview">{{ item.name }}<span class="pull-right"><i class="icon-black icon-remove-sign" data-ng-click="removeViewField(item,'0')"></i></span></li>
         </ul>
     </div>
     <div class="span2">
