--- a/client/app/partials/projectdashboard.html
+++ b/client/app/partials/projectdashboard.html
@@ -7,9 +7,9 @@
         <h5>News</h5>
         <form class="form-inline">
             <input type="text" class="input-xlarge" placeholder="News" data-ng-model="news.item">
-            <button type="submit" data-ng-click="AddNewsItem(news.item)" data-ng-show="news.item"class="btn btn-small">Post</button>
+            <button type="submit" data-ng-click="AddNewsItem(news)" data-ng-show="news.item"class="btn btn-small">Post</button>
         </form>
-        <ul class="unstyled" >
+        <ul class="unstyled">
             <li ng-repeat="news in project.news">{{ news }}</li>
         </ul>
     </div>
