--- a/client/app/partials/projectdashboard.html
+++ b/client/app/partials/projectdashboard.html
@@ -1,17 +1,33 @@
 <div data-ng-init="findOne()"></div>
-<h4>{{ project.Title }}</h4>
+
+<div class="row-fluid">
+    <div class="span4">
+        <h5>{{ project.Title }}</h5>
+    </div>
+    <div class="span4">
+         <div class="progress progress-success">
+            <div class="bar" style="width: 60%;"></div>
+        </div>
+    </div>
+</div>
 
 <div class="row-fluid">
 
     <div class="span4">
         <h5>News</h5>
         <form class="form-inline">
-            <input type="text" class="input-xlarge" placeholder="News" data-ng-model="news.item">
-            <button type="submit" data-ng-click="AddNewsItem(news)" data-ng-show="news.item"class="btn btn-small">Post</button>
+            <input type="text" style="width: 80%;" class="input-xlarge" placeholder="News" data-ng-model="news.item">
+            <button type="submit" data-ng-click="AddNewsItem(news)" data-ng-show="news.item" class="btn btn-small">Post</button>
         </form>
-        <ul class="unstyled">
-            <li ng-repeat="news in project.news">{{ news }}</li>
-        </ul>
+
+        <div class="row-fluid">
+            <ul class="unstyled">
+                <li ng-repeat="news in project.news">
+                    <div class="span8">{{ news.item }} </div>
+                    <div class="span4"><span am-time-ago="news.cd"></span></div>
+                </li>
+            </ul>
+        </div>
     </div>
 
     <div class="span4">
@@ -19,9 +35,9 @@
         <h5>Tasks</h5>
         <form class="form-inline">
             <input type="text" class="input-large" placeholder="Task" data-ng-model="task.name">
-            <input type="text" class="input-small" placeholder="When" data-ng-model="task.date">
+            <input type="text" class="input-small" placeholder="When" datepicker-popup="dd-MM-yy" show-weeks="0" datepicker-options="dateOptions" data-ng-model="task.date">
             <input type="text" class="input-mini" placeholder="Who" data-ng-model="task.who">
-            <button type="submit" data-ng-click="AddTask(task)" class="btn btn-small pull-right">Add</button>
+            <button type="submit" data-ng-click="AddTask(task)" data-ng-show="task.name" class="btn btn-small pull-right">Add</button>
         </form>
         <ul class="unstyled" >
             <li ng-repeat="task in project.tasks">{{ task.name }}</li>
