Added Flatly UI, and tidied up a lot of the views and stuff

--- a/client/app/partials/allobjects.html
+++ b/client/app/partials/allobjects.html
@@ -32,7 +32,7 @@
         <td>{{object.type}}</td>
         <td><span class="badge">{{object.fields.length}}</span></td>
         <td><span class="badge">{{object.views.length}}</span></td>
-        <td><button type="button"  class="btn btn-small" data-ng-click="removeObject(object)"><i class="icon-black icon-trash"></i> Delete</button></td>
+        <td><button type="button"  class="btn btn-warning btn-small" data-ng-click="removeObject(object)"><i class="fa fa-trash-o"></i> Delete</button></td>
     </tr>
 </table>
 
