--- a/client/app/partials/objectedit.html
+++ b/client/app/partials/objectedit.html
@@ -4,16 +4,19 @@
     <div class="span6">
      <h3>{{object.name}}</h3>
     </div>
-    <div class="span6">
+    <div class="span4">
         <div class="dropdown pull-right">
-            <button type="button" class="btn dropdown-toggle">Copy</button>
+            <button type="button" class="btn dropdown-toggle"><i class="fa fa-files-o"></i> Copy</button>
+
             <ul class="dropdown-menu">
                 <li ng-repeat="copyobject in data.objects">
                     <a data-ng-click="copySelectedObject(copyobject);focusInput=true">{{copyobject.name}}</a>
                 </li>
             </ul>
         </div>
-        <a href="#/objects/{{object._id}}/views" class="btn pull-right">Views</a>
+    </div>
+    <div class="span2">
+        <a href="#/objects/{{object._id}}/views" class="btn pull-right"><i class="fa fa-list-ul"></i> Views</a>
     </div>
 </div>
 
@@ -51,7 +54,7 @@
                 <input type="text" data-ng-model="newfield.length" class="form-control" id="newfieldlength" >
             </td>
             <td>
-                <button type="button" class="btn btn-small pull-right" data-ng-click="addField(newfield);focusInput=true"><i class="icon-black icon-circle-arrow-down"></i> Add</button>
+                <button type="button" class="btn btn-primary pull-right" data-ng-click="addField(newfield);focusInput=true"><i class="fa fa-plus-square-o"></i> Add</button>
             </td>
         </tr>
         <tr data-ng-repeat="column in object.fields" data-ng-model="object.fields">
@@ -60,7 +63,7 @@
             <td class="" data-ng-show="column.req == 'y'">{{column.req}}</td>
             <td data-ng-show="column.req == 'n'"></td>
             <td>{{column.length}}</td>
-            <td><button type="button"  class="btn btn-small pull-right" data-ng-click="removeField(column)"><i class="icon-black icon-trash"></i> Delete</button></td>
+            <td><button type="button"  class="btn pull-right" data-ng-click="removeField(column)"><i class="fa fa-trash-o"></i> Delete</button></td>
         </tr>
     </table>
 </div>
