--- a/client/app/partials/objectviews.html
+++ b/client/app/partials/objectviews.html
@@ -4,10 +4,12 @@
 
     <div class="span2">
 
-        <h5>Available Fields</h5>
+        <ul class="breadcrumb">
+            <li>Available Fields</li>
+        </ul>
 
         <ul class="unstyled"  ng-model="objectFields">
-            <li ng-repeat="field in object.fields">{{ item }}<span class="pull-right" data-ng-click="addFieldToViews(field)"><i class="icon-gray icon-arrow-right"></i></span>{{field.name}}</td></li>
+            <li ng-repeat="field in object.fields">{{ item }}<span class="pull-right" data-ng-click="addFieldToViews(field)"><i class="fa fa-arrow-circle-right"></i></span>{{field.name}}</td></li>
         </ul>
 
         <!--<tr data-ng-repeat="field in object.fields" data-ng-model="object.fields">-->
@@ -16,33 +18,44 @@
     </div>
 
     <div class="span2">
-        <h5>Create</h5>
+        <ul class="breadcrumb">
+            <li>Create</li>
+        </ul>
+        <!--<h5>Create</h5>-->
         <ul data-ng-update = "updateCreateView()" class="unstyled" ui-sortable="sortableOptionsCreate" ng-model="createview">
-            <li ng-repeat="item in createview">{{ item.name }}<span class="pull-right"><i class="icon-black icon-remove-sign" data-ng-click="removeViewField(item,'0')"></i></span></li>
+            <li ng-repeat="item in createview">{{ item.name }}<span class="pull-right"><i class="fa fa-trash-o" data-ng-click="removeViewField(item,'0')"></i></span></li>
         </ul>
     </div>
     <div class="span2">
-        <h5>Edit</h5>
+        <ul class="breadcrumb">
+            <li>Edit</li>
+        </ul>
         <ul data-ng-update = "updateEditView()" class="unstyled" ui-sortable="sortableOptions" ng-model="editview">
-            <li ng-repeat="item in editview">{{ item.name }}<span class="pull-right"><i class="icon-black icon-remove-sign" data-ng-click="removeViewField(item,'1')"></i></span></li>
+            <li ng-repeat="item in editview">{{ item.name }}<span class="pull-right"><i class="fa fa-trash-o" data-ng-click="removeViewField(item,'1')"></i></span></li>
         </ul>
     </div>
     <div class="span2">
-        <h5>Show</h5>
+        <ul class="breadcrumb">
+            <li>Show</li>
+        </ul>
         <ul data-ng-update = "updateShowView()" class="unstyled" ui-sortable="sortableOptions" ng-model="showview">
-            <li ng-repeat="item in showview">{{ item.name }}<span class="pull-right"><i class="icon-black icon-remove-sign" data-ng-click="removeViewField(item,'2')"></i></span></li>
+            <li ng-repeat="item in showview">{{ item.name }}<span class="pull-right"><i class="fa fa-trash-o" data-ng-click="removeViewField(item,'2')"></i></span></li>
         </ul>
     </div>
     <div class="span2">
-        <h5>Dashboard</h5>
+        <ul class="breadcrumb">
+            <li>Dashboard</li>
+        </ul>
         <ul data-ng-update = "updateDashboardView()" class="unstyled" ui-sortable="sortableOptions" ng-model="dashboardview">
-            <li ng-repeat="item in dashboardview">{{ item.name }}<span class="pull-right"><i class="icon-black icon-remove-sign" data-ng-click="removeViewField(item,'3')"></i></span></li>
+            <li ng-repeat="item in dashboardview">{{ item.name }}<span class="pull-right"><i class="fa fa-trash-o" data-ng-click="removeViewField(item,'3')"></i></span></li>
         </ul>
     </div>
     <div class="span2">
-        <h5>List</h5>
+        <ul class="breadcrumb">
+            <li>List</li>
+        </ul>
         <ul data-ng-update = "updateListView()" class="unstyled" ui-sortable="sortableOptions" ng-model="listview">
-            <li ng-repeat="item in listview">{{ item.name }}<span class="pull-right"><i class="icon-black icon-remove-sign" data-ng-click="removeViewField(item,'4')"></i></span></li>
+            <li ng-repeat="item in listview">{{ item.name }}<span class="pull-right"><i class="fa fa-trash-o" data-ng-click="removeViewField(item,'4')"></i></span></li>
         </ul>
     </div>
 
