some changes to the object Edit page

--- a/client/app/partials/objectedit.html
+++ b/client/app/partials/objectedit.html
@@ -16,7 +16,8 @@
         </div>
     </div>
     <div class="span2">
-        <a href="#/objects/{{object._id}}/views" class="btn pull-right"><i class="fa fa-list-ul"></i> Views</a>
+        <a href="#/objects/{{objectId}}/views" class="btn pull-right"><i class="fa fa-list-ul"></i> Views</a>
+        <!--<a href="#/objects/{{object._id}}/views" class="btn pull-right"><i class="fa fa-list-ul"></i> Views</a>-->
     </div>
 </div>
 
