--- a/client/app/partials/projectdashboard.html
+++ b/client/app/partials/projectdashboard.html
@@ -28,8 +28,8 @@
                     <textarea class="input-xlarge" id="news" data-ng-model="news.item" rows="3"></textarea>
                 </div>
                 <div class="form-actions">
-                    <button type="submit" class="btn btn-primary" data-ng-click="AddNewsItem(news)">Save changes</button>
-                    <button type="reset" class="btn" ng-click="newsEditorEnabled=!newsEditorEnabled">Cancel</button>
+                    <button type="submit" class="btn btn-primary" data-ng-click="AddNewsItem(news)">Save</button>
+                    <button type="reset" class="btn" ng-click="newsEditorEnabled=!newsEditorEnabled">Done</button>
                 </div>
             </fieldset>
         </form>
@@ -69,8 +69,8 @@
                         <input type="text" class="input" placeholder="Who" data-ng-model="task.who">
                     </div>
                     <div class="form-actions">
-                        <button type="submit" class="btn btn-primary" data-ng-click="AddTask(task)">Save changes</button>
-                        <button type="reset" class="btn" ng-click="taskEditorEnabled=!taskEditorEnabled">Cancel</button>
+                        <button type="submit" class="btn btn-primary" data-ng-click="AddTask(task)">Save</button>
+                        <button type="reset" class="btn" ng-click="taskEditorEnabled=!taskEditorEnabled">Done</button>
                     </div>
                     <!---->
                         <!---->
