--- a/client/app/partials/projectdashboard.html
+++ b/client/app/partials/projectdashboard.html
@@ -10,6 +10,20 @@
             <div class="bar" style="width: 60%;"></div>
         </div>
     </div>
+    <div class="span4">
+        <div class="dropdown pull-right">
+            <button type="button" class="btn dropdown-toggle"><i class="fa fa-cog"></i></button>
+
+            <ul class="dropdown-menu">
+                <li>
+                    {{routeParams}}
+                    <a data-ng-href="#/projectcopy/{{currentProjectId}}">Copy Project</a>
+                    <a data-ng-click="showProjectsToCopy">Manage Tasks</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+
 </div>
 
 <div class="row-fluid">
