--- a/client/app/partials/projectcopy.html
+++ b/client/app/partials/projectcopy.html
@@ -1,4 +1,14 @@
-<h3>Project Copy</h3>
+<div class="row-fluid">
+    <div class="span2">
+        <h3>Project Copy</h3>
+    </div>
+    <div class="span2">
+        <button type="button" class="btn btn-warning pull-right" data-ng-click="copyContent()"><i class="fa fa-copy"></i> Copy</button>
+    </div>
+    <div class="span8">
+
+    </div>
+</div>
 
 <div class="row-fluid">
     <div class="span4">
@@ -12,16 +22,23 @@
                 <ul class="unstyled">
                     <li  ng-repeat="task in selectedProject.tasks | orderBy:'date':false">
                         <label class="checkbox">
-                            <input type="checkbox" checked>{{ task.name }}
+                            <input type="checkbox" data-ng-model="task.selected">{{ task.name }}
                         </label>
                     </li>
                 </ul>
+                <label>Start On</label>
+                <input type="text" class="input-small" placeholder="Start" datepicker-append-to-body="true" datepicker-popup="dd-MM-yy" show-weeks="0" datepicker-options="dateOptions"  data-ng-model="formItem.startdate">
+                <label>Finish By</label>
+                <input type="text" class="input-small" placeholder="End" datepicker-append-to-body="true" datepicker-popup="dd-MM-yy" show-weeks="0" datepicker-options="dateOptions"  data-ng-model="formItem.enddate">
+                <label class="checkbox">
+                    <input type="checkbox" data-ng-model="skipWeekends" checked>Skip Weekends and Holidays
+                </label>
             </accordion-group>
             <accordion-group heading="Files :  {{selectedProject.assets.length}}" is-open="false">
                 <ul class="unstyled">
                     <li  ng-repeat="asset in selectedProject.assets | orderBy:'date':false">
                         <label class="checkbox">
-                            <input type="checkbox">{{ asset.filename }}
+                            <input type="checkbox" data-ng-model="asset.selected">{{ asset.filename }}
                         </label>
                     </li>
                 </ul>
