--- a/client/app/partials/projects.html
+++ b/client/app/partials/projects.html
@@ -1,13 +1,20 @@
-<h3>Projects</h3>
-
 <div class="row-fluid">
     <div class="span2">
-        <ul class="unstyled" >
-            <li ng-repeat="type in data.projects"><a ng-href="#/projects" data-ng-click="projectFieldsForCreate(type)">{{ type.name }}</a></li>
-        </ul>
-    </div>
+        <div class="dropdown pull-left">
+            <button type="button" class="btn dropdown-toggle"><i class="fa fa-plus"></i> New</button>
+            <ul class="dropdown-menu">
+                <li ng-repeat="type in projectTypes">
+                    <a data-ng-click="projectFieldsForCreate(type)">{{ type.name }}</a>
+                </li>
+            </ul>
+        </div>
+     </div>
+</div>
 
-    <div class="span2">
+
+<div class="row-fluid">
+
+    <div class="span12">
         <form>
 
             <fieldset>
@@ -26,12 +33,14 @@
                     </div>
             </fieldset>
 
-            <button data-ng-click="saveFormDetails(formItems)">Save</button>
+            <!--<button class="btn btn-primary" data-ng-show="formItems" data-ng-click="saveFormDetails(formItems)">Save</button>-->
+
             <!--<button data-ng-click="saveFormDetails(formItems)">Save</button>-->
         </form>
     </div>
-
-    <div class="span8">
+</div>
+    <div class="row-fluid">
+    <div class="span12">
 
         <table class="table table-condensed">
             <tr>
@@ -44,7 +53,7 @@
 
             </tr>
             {{type.name}}
-            <tr ng-repeat="object in projectInstances| filter:type.name">
+            <tr ng-repeat="object in projectInstances">
                 <td>
                     <a data-ng-href="#/projects/{{object._id}}/edit">{{object.Title}}</a>
                 </td>
@@ -64,6 +73,5 @@
             </tr>
         </table>
     </div>
-
-</div>
+ </div>
 
