--- a/client/app/partials/modalProjectCreate.html
+++ b/client/app/partials/modalProjectCreate.html
@@ -7,8 +7,8 @@
             <!--<legend>Enter Data</legend>-->
             <div ng-repeat="formItem in items">
                 <div ng-switch on="formItem.type">
-                    <label>{{formItem.name}}</label>
-                    <textarea rows="5" ng-switch-when="Note" data-ng-model="formItem.content"></textarea>
+                    <label class="control-label">{{formItem.name}}</label>
+                    <textarea rows="3" ng-switch-when="Note" data-ng-model="formItem.content"></textarea>
                     <input type="text" ng-switch-when="Text" data-ng-model="formItem.content">
                     <input type="text" ng-switch-when="User" data-ng-model="formItem.content">
                     <input type="text" class="input-small" placeholder="When" datepicker-popup="dd-MM-yy" show-weeks="0" datepicker-options="dateOptions" ng-switch-when="Date" data-ng-model="formItem.content">
