--- a/client/app/partials/projectdashboard.html
+++ b/client/app/partials/projectdashboard.html
@@ -95,7 +95,7 @@
 
 
     <ul class="unstyled">
-            <li ng-repeat="task in project.tasks | orderBy:'date':false">
+            <li ng-repeat="task in project.tasks | orderBy:'date':true">
                 <div class="span6">{{ task.name }} </div>
                 <div class="span3"><span am-time-ago="task.date"></span></div>
                 <div class="span3">{{ task.who }}</span></div>
