--- a/client/app/partials/projectdashboard.html
+++ b/client/app/partials/projectdashboard.html
@@ -31,7 +31,7 @@
     <div class="span4">
         <div class="span12">
             <ul class="breadcrumb">
-                <li>News <i class="fa fa-edit" ng-click="newsEditorEnabled=!newsEditorEnabled"></i></li>
+                <li><span>News </span> <i class="fa fa-edit" ng-click="newsEditorEnabled=!newsEditorEnabled"></i></li>
             </ul>
         </div>
 
