search working right

--- a/client/app/partials/allobjects.html
+++ b/client/app/partials/allobjects.html
@@ -2,7 +2,7 @@
     <div class="span6">
         <form class="form-inline" role="form" data-ng-submit="create()">
             <div class="form-group">
-                <input data-ng-show="data.selectedType" type="text" data-ng-model="newobject.name" class="form-control" id="name" autofocus="autofocus" value="{{newobject.name}}">
+                <input data-ng-show="search.type" type="text" data-ng-model="newobject.name" class="form-control" id="name" autofocus="autofocus" value="{{newobject.name}}">
             </div>
         </form>
     </div>
